Se corrige conexion a BD

--- a/VitaFood/appsettings.json
+++ b/VitaFood/appsettings.json
@@ -1,13 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
     },
 
     "ConnectionStrings": {
-      "VitaFoodDB": "Server=localhost;Database=VitaFoodDB;Trusted_Connection=True;TrustServerCertificate=True;"
-    }
-  },
-  "AllowedHosts": "*"
+        "sql": "Server=.; Database=VitaFood_DB;Trusted_Connection=True;TrustServerCertificate=True; MultipleActiveResultSets=true;"
+    },
+
+    "AllowedHosts": "*"
 }
